01-fundamentals/lab/pod-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-demo-pod
spec:
  containers:
  - name: app-container
    image: nginx
    volumeMounts:
    - name: app-volume
      mountPath: /data
  volumes:
  - name: app-volume
    emptyDir: {}
