01-fundamentals/lab/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest  
    ports:
    - containerPort: 80
