01-fundamentals/lab/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nodeport-service
spec:
  type: NodePort
  selector:
    app: demo
  ports:
    - port: 80          # Service port
      targetPort: 80    # Container port
      nodePort: 30007   # NodePort (range: 30000–32767)
